<resources>
    <string name="app_name">HSE Base</string>
    <string name="button1">Расписание для студентов</string>
    <string name="button2">Расписание для преподавателя</string>
    <string name="button3">Расписание на день</string>
    <string name="button4">Расписание на неделю</string>
    <string name="textView"> Выберите преподавателя:</string>>
    <string name="logo">Картинка</string>
    <string name="textView2">Сейчас: 12:00</string>
    <string name="textView3">Идет пара/Нет пар</string>
    <string name="textView4">Дисциплина</string>
    <string name="textView5">Кабинет</string>
    <string name="textView6">Корпус</string>
    <string name="textView7">Преподаватель</string>
    <string name="groupList">Выберите группу:</string>
    <string name="settings">Настройки</string>
    <string name="gyroscope">Гироскоп:</string>
    <string name="accelerometer">Акселерометр:</string>
    <string name="motion">Датчик движения:</string>
    <string name="now_is">Сейчас:</string>
    <string name="settingsSaveButton">Сохранить</string>
    <string name="settingsTakePhoto">Сделать фото</string>
    <string name="settingsSpecifyPhoto">Укажите фото:</string>
    <string name="settingsCurrentIllumination">Текущая освещенность:</string>
    <string name="settingsNameTextBox">Укажите свое имя</string>
    <string name="alertSettingsDialogMessage">Для снятия фото нужно предоставить права на доступ к камере</string>
    <string name="alertSettingsDialogTitle">Нужно предоставить права</string>
    <string name="alertSettingsDialogOK">OK</string>
    <string name="timetableStatusDefault">Нет пар</string>
    <string name="timetableSubjectDefault">Дисциплина</string>
    <string name="timetableCabinetDefault">Кабинет</string>
    <string name="timetableCorpDefault">Корпус</string>
    <string name="timetableTeacherDefault">Преподаватель</string>
    <string name="lesson_is_running">Идет пара</string>
    <string name="corp">\"Корпус \"</string>
    <string name="aud">\", ауд. \"</string>
    <string name="no_lessons">Пар в расписании нет</string>
    <string name="error_timetable">Ошибка получения расписания</string>
</resources>