<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/settingsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsSpecifyPhoto" />

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:id="@+id/imageView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsTakePhoto"
                android:id="@+id/takePhotoButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/nameTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/settingsNameTextBox"
                android:textColor="?attr/colorControlNormal" />

            <TextView
                style="@style/LabelStyle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingsCurrentIllumination" />

            <TextView
                android:id="@+id/sensorLightText"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/LabelStyle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gyroscope" />

            <TextView
                android:id="@+id/sensorGyroscopeText"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart" />

            <TextView
                style="@style/LabelStyle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accelerometer" />

            <TextView
                android:id="@+id/sensorAccelerometerText"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart" />

            <TextView
                style="@style/LabelStyle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/motion" />

            <TextView
                android:id="@+id/sensorMotionText"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:text="@string/settingsSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLinearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>